# PassesPerMinute

./: LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_dashboard.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: index.md
docs/gen_ref_pages/: config.py  generate.py  traverse.py
src/passes_per_minute/: __main__.py  app.py  streamlit_app.py
src/passes_per_minute/data/: granular_stats.json
src/passes_per_minute/passes_counter/: __init__.py  competition_manager.py  competition_processor.py  http_client.py  match_processor.py  player_position_stats.py
src/passes_per_minute/plotter/: __init__.py  bar_chart.py  football_pitch_chart.py
tests/passes_counter/: test_competition_manager.py  test_competition_process.py  test_http_client.py  test_match_processor.py  test_player_position_stats.py
tests/plotter/: test_bar_chart.py  test_football_pitch_chart.py
